[package]
name = "my-program"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = { version = "0.10.1", features = ["cpi"] }
pinocchio-token = "0.5.0"                              # SPL token CPIs
pinocchio-system = "0.5.0"                             # system program CPIs (create account, transfer SOL)
pinocchio-log = "0.4.0"                                # log! macro

[features]
bpf-entrypoint = []
